--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "projeto19-drivencare",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
